--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "7.7.0",
+    "@reduxjs/toolkit": "^2.2.4",
     "expo": "~51.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-safe-area-context": "4.10.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
